tests/sources/invalid/strings/string_implicit_conv_error.fire
import @firescript/std.io.println;
println("value: " + 42);
string s = "x" + true;
